--- a/fresta.tmpl
+++ b/fresta.tmpl
@@ -52,7 +52,7 @@
             <div class="<TMPL_VAR NAME=col0>">
           <TMPL_ELSE>
             <TMPL_IF NAME=col3>
-              <div class="col-sm-4 col-md-6>">
+              <div class="col-sm-4 col-md-6">
             <TMPL_ELSE>
               <div>
             </TMPL_IF>
